--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -22,7 +22,7 @@ $pointColor: #FE464B;
 svg {
   width : 1000px;
   height : 200px;
-  font-family: 'Poppins', sans-serif;
+  font-family: "ubuntu", sans-serif;
 
 }
 .svg-1 {
