--- a/src/components/Contact.scss
+++ b/src/components/Contact.scss
@@ -1,30 +1,51 @@
+$fontColor: rgb(65 65 65);
+$pointColor: #FE464B;
+
 .contact-form {
     width: 60vw;
     max-width: 1000px;
-    margin: 10vh auto;
+    margin: 20vh auto;
+    color: $fontColor;
+
+    h {
+        margin-bottom: 2rem;
+    }
 
     p {
         font-size: 1.3rem;
         font-weight: 100;
         padding: 30px 0;
+        margin-bottom: 5vh;
     }
 
-    form {
-        padding: 30px 0;
-        font-size: 1.3rem;
-    }
+    // form {
+    //     padding: 30px 0;
+    //     font-size: 1.3rem;
+    // }
 
-    input {
-        height: 3rem;
-    }
+    // input {
+    //     height: 3rem;
+    // }
 
-    button {
-        width: 200px;
-        height: 50px;
+    // button {
+    //     width: 200px;
+    //     height: 50px;
+    // }
+}
+
+
+.contact-link{
+    display: block;
+    margin-bottom: 2rem;
+    text-decoration: none;
+    color: $pointColor;
+    font-size: 1.5rem;
+
+    span {
+        margin-left: 1rem;
     }
 }
 
 .logo {
-    width: 150px;
-    margin-right: 30px;
+    height: 50px;
 }
