--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,9 @@ body {
 
 .main-text {
   text-decoration: none;
-  font-size: 13rem;
+  font-size: 9rem;
   color: rgb(35, 35, 35);
-  margin: 1rem 10%;
+  margin: 1rem 10% 0;
 }
 
 .main-text:hover {
@@ -45,8 +45,11 @@ body {
 }
 
 @media (max-width: 1024px) {
+  /* .main-menu-lists {
+    margin-top: 25%;
+  } */
   .main-text {
-    font-size: 10rem;
+    font-size: 6rem;
   }
 
   .main-img {
@@ -58,9 +61,9 @@ body {
     transform: translateX(-50%);
   }
 }
-/*
-@media (max-width: 600px) {
-  .main-text {
 
+@media (max-width: 500px) {
+  .main-text {
+    font-size: 4rem;
   }
-} */
+}
