--- a/src/components/About.scss
+++ b/src/components/About.scss
@@ -92,10 +92,10 @@ text {
 
   p {
     color: $fontColor;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 1.6;
-    margin: 0;
-    margin-bottom: 3rem;
+    text-align: justify;
+    margin: 3rem 0;
   }
 
   img {
