--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&family=Ubuntu:wght@500;700&display=swap');
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
+#root {
+  font-size: 16px;
+}
+
 body {
   /* background-color: black; */
   font-family: 'Noto Sans', sans-serif;
