--- a/src/components/Detail.scss
+++ b/src/components/Detail.scss
@@ -11,8 +11,7 @@ $pointColor: #FE464B;
 
     .project-img {
       margin-top: 10%;
-      width: 80%;
-      max-width: 600px;
+      width: 500px
     }
 
 
